--- a/.github/workflows/installer-windows.yml
+++ b/.github/workflows/installer-windows.yml
@@ -21,9 +21,9 @@ jobs:
     - run: cd app/build; sh mustang-brand.sh
     - run: cd app; yarn install
     - run: cd lib; yarn install
-    - run: cd backend; yarn install
-    - run: cd e2; yarn install
-    - run: cd e2; yarn run build:release:win
+    - run: cd desktop; yarn install
+    - run: cd desktop/backend; yarn install
+    - run: cd desktop; yarn run build:release:win
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
@@ -34,5 +34,5 @@ jobs:
       with:
         name: Installers Windows
         path: |
-          e2/dist/*.exe
-          e2/dist/*.msi
+          desktop/dist/*.exe
+          desktop/dist/*.msi
