--- a/.github/workflows/installer-windowsarm-parula.yml
+++ b/.github/workflows/installer-windowsarm-parula.yml
@@ -25,9 +25,9 @@ jobs:
     - run: cd app/build; bash parula-brand.sh
     - run: cd app; yarn install
     - run: cd lib; yarn install
-    - run: cd backend; yarn install
-    - run: cd e2; yarn install
-    - run: cd e2; yarn run build:release:win
+    - run: cd desktop; yarn install
+    - run: cd desktop/backend; yarn install
+    - run: cd desktop; yarn run build:release:win
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
@@ -38,5 +38,5 @@ jobs:
       with:
         name: Parula Installers Windows ARM
         path: |
-          e2/dist/*.exe
-          e2/dist/*.msi
+          desktop/dist/*.exe
+          desktop/dist/*.msi
