--- a/.github/workflows/installer-ios.yml
+++ b/.github/workflows/installer-ios.yml
@@ -47,7 +47,7 @@ jobs:
       - run: cd app/build; sh mustang-brand.sh
       - run: cd app; yarn install
       - run: cd lib; yarn install
-      - run: cd backend; yarn install
+      - run: cd desktop/backend; yarn install
       - run: cd mobile; yarn install
       - run: cd mobile/backend; yarn install
       - run: cd mobile; yarn build:ios:release
