--- a/desktop/backend/tsconfig.json
+++ b/desktop/backend/tsconfig.json
@@ -1,12 +1,12 @@
 {
   "include": [
     "./*",
+    "../../lib/**/*",
     "../../app/logic/*"
   ],
   // <copied from="../tsconfig.json">
   // <copied from="../tsconfig.node.json">
   "compilerOptions": {
-    "verbatimModuleSyntax": true,
     "useDefineForClassFields": true,
     "strict": false,
     "allowJs": true,
@@ -14,6 +14,7 @@
     "composite": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
+    "esModuleInterop": true,
     "lib": [
       "ESNext",
       "DOM",
