Build: Move e2/ to desktop/ and backend/ to desktop/backend/ (#1024)
* Move directories:
  * e2/ -> desktop/
  * backend/ -> desktop/backend/
* Add desktop/backend/tsconfig.json
* Adapt file paths

--- a/desktop/tsconfig.json
+++ b/desktop/tsconfig.json
@@ -2,14 +2,15 @@
   "extends": "@electron-toolkit/tsconfig/tsconfig.json",
   "include": [
     "../app/**/*",
-    "../backend/**/*",
+    "./backend/**/*",
+    "../lib/**/*",
     "src/renderer/src/env.d.ts",
     "src/renderer/src/**/*",
     "src/renderer/src/**/*.svelte",
     "../electron/src/logic.ts",
     "../electron/src/logic/**/*",
     "src/preload/*.d.ts"
-  ],
+, "backend/ntlm.js"  ],
   "compilerOptions": {
     "verbatimModuleSyntax": true,
     "useDefineForClassFields": true,
