--- a/desktop/tsconfig.node.json
+++ b/desktop/tsconfig.node.json
@@ -4,8 +4,9 @@
     "electron.vite.config.*",
     "src/main/*",
     "src/preload/*",
-    "src/backend/*",
-    "../backend/*",
+    "src/renderer/*",
+    "./backend/*",
+    "../lib/**/*",
   ],
   "compilerOptions": {
     "composite": true,
