Build: ARM release files overwrite x86 release files - disable until renamed #1029

--- a/.github/workflows/installer-windowsarm.yml
+++ b/.github/workflows/installer-windowsarm.yml
@@ -2,8 +2,8 @@ name: Installers for Windows ARM
 
 on:
   workflow_dispatch: # manually triggered
-  push:
-    tags: 'v*'
+#  push:
+#    tags: 'v*'
 
 jobs:
   build:
