--- a/.github/workflows/installer-windowsarm-parula.yml
+++ b/.github/workflows/installer-windowsarm-parula.yml
@@ -2,8 +2,8 @@ name: Parula Installers for Windows ARM
 
 on:
   workflow_dispatch: # manually triggered
-  push:
-    tags: 'v*'
+#  push:
+#    tags: 'v*'
 
 jobs:
   build:
