Use bash for windows

--- a/.github/workflows/installer-windows.yml
+++ b/.github/workflows/installer-windows.yml
@@ -18,7 +18,8 @@ jobs:
       with:
         node-version: 24.x
 
-    - run: cd app/build; sh mustang-brand.sh
+    - shell: bash
+      run: cd app/build; sh mustang-brand.sh
     - run: cd app; yarn install
     - run: cd lib; yarn install
     - run: cd desktop; yarn install
