Squashed commit of the following:
commit 65eaac24b8163dc72192a8964324078acaa73a4f
Author: Jeremy Chang <jeremy.chang@beonex.com>
Date:   Thu Feb 12 13:45:14 2026 -0600

    Don't upload yml

commit b06bc897e48a6ae8d26e3db54be688ce6cfbfa36
Author: Jeremy Chang <jeremy.chang@beonex.com>
Date:   Thu Feb 12 12:11:02 2026 -0600

    Build Only steps

commit 721dcbfc584bd6a949d32217f2f8da662a7e8242
Author: Jeremy Chang <jeremy.chang@beonex.com>
Date:   Thu Feb 12 11:52:49 2026 -0600

    Make changes for other files

commit 4337d691fb36ad1cc6b8279ae135e6e52c4664c4
Author: Jeremy Chang <jeremy.chang@beonex.com>
Date:   Thu Feb 12 11:18:33 2026 -0600

    Get version from package.json

commit 7bded9563d440a67b44d3e7fb5a16c4cfe0fb3b4
Author: Jeremy Chang <jeremy.chang@beonex.com>
Date:   Thu Feb 12 11:15:57 2026 -0600

    Use bash shell

commit 0ddd8820c6df87dda53ae3c56f9d6b16618c52cb
Author: Jeremy Chang <jeremy.chang@beonex.com>
Date:   Thu Feb 12 11:12:57 2026 -0600

    WindowsARM: Test build

--- a/.github/workflows/installer-linuxarm-parula.yml
+++ b/.github/workflows/installer-linuxarm-parula.yml
@@ -27,12 +27,36 @@ jobs:
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
         node-version: 24.x
 
+    - name: Check for release
+      run: |
+        cd desktop
+        VERSION=$(jq -r '.version' package.json)
+        if [[ "$VERSION" == *dev ]]; then
+          echo "RELEASE=false" >> $GITHUB_ENV
+        else
+          echo "RELEASE=true" >> $GITHUB_ENV
+        fi
+
     - run: cd app/build; bash parula-brand.sh
     - run: cd app; yarn install
     - run: cd lib; yarn install
     - run: cd desktop; yarn install
     - run: cd desktop/backend; yarn install
-    - run: cd desktop; yarn run build:release:linux
+
+    - name: Build only
+      if: env.RELEASE == 'false'
+      run: cd desktop; yarn run build:linux
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
+        # For Sentry source maps. Otherwise, vite build is out of memory
+        NODE_OPTIONS: '--max-old-space-size=32768'
+        # Work around <https://github.com/electron-userland/electron-builder/issues/9563>
+        USE_SYSTEM_FPM: true
+
+    - name: Build and Release
+      if: env.RELEASE == 'true'
+      run: cd desktop; yarn run build:release:linux
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
