--- a/desktop/package.json
+++ b/desktop/package.json
@@ -15,6 +15,7 @@
     "build-org": "npm run typecheck && electron-vite build",
     "build": "electron-vite build",
     "build:win": "npm run build && electron-builder --win --config",
+    "build:win:arm": "npm run build && electron-builder --win -c.publish.channel=%npm_package_name%-windows-arm64 -c.nsis.artifactName='${name}-${version}-${arch}.${ext}'",
     "build:mac": "npm run build && electron-builder --mac --config",
     "build:linux": "npm run build && npm run icon:icns && electron-builder --linux --config",
     "build:release:win": "npm run build && electron-builder --win --config --publish always",
