--- a/desktop/package.json
+++ b/desktop/package.json
@@ -15,9 +15,11 @@
     "build-org": "npm run typecheck && electron-vite build",
     "build": "electron-vite build",
     "build:win": "npm run build && electron-builder --win --config",
+    "build:win:arm": "npm run build && electron-builder --win --config -c.publish.channel=%npm_package_name%-windows-arm64 -c.nsis.artifactName=\"${name}-${version}-${arch}-setup.${ext}\"",
     "build:mac": "npm run build && electron-builder --mac --config",
     "build:linux": "npm run build && npm run icon:icns && electron-builder --linux --config",
     "build:release:win": "npm run build && electron-builder --win --config --publish always",
+    "build:release:win:arm": "npm run build && electron-builder --win --config --publish always -c.publish.channel=%npm_package_name%-windows-arm64 -c.nsis.artifactName=\"${name}-${version}-${arch}-setup.${ext}\"",
     "build:release:mac": "npm run build && electron-builder --mac --config --publish always",
     "build:release:linux": "npm run build && npm run icon:icns && electron-builder --linux --config --publish always",
     "postinstall": "electron-builder install-app-deps",
